[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }
dtb-walker = "=0.2.0-alpha.3"
rvbt = { git = "https://github.com/zhaozihanzzh/rvbt", branch = "main" }
# trace_lib = {git = "https://github.com/os-module/rtrace"}
bit_field = "0.10.1"
addr2line = { path = "../addr2line-0.21.0", version = "0.21.0", default-features = false, features = ["rustc-demangle"] }
gimli = { version = "0.28.0", default-features = false, features = ["read"]}
rustc-demangle = "0.1"


[profile.release]
debug = true
